<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan"
    android:orientation="vertical"
    tools:context="com.daniel13pe.forms.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.005"
            android:textStyle="bold"
            android:gravity="left"
            android:layout_margin="15dp"
            android:textColor="@color/black"
            android:text="*Selecciona una Figura:"
            android:textSize="21sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:layout_margin="2dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:layout_margin="3dp">
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/radios">
                    <RadioButton
                        android:id="@+id/rcuadrado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="18dp"
                        android:textStyle="bold"
                        android:text="@string/Cuadrado"
                        android:layout_gravity="left"
                        android:onClick="onRadioButtonClicked"/>
                    <RadioButton
                        android:id="@+id/rtriangulo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="left"
                        android:text="@string/Triangulos"
                        android:onClick="onRadioButtonClicked"/>
                    <RadioButton
                        android:id="@+id/rcirculo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="left"
                        android:gravity="center"
                        android:text="@string/Circulo"
                        android:onClick="onRadioButtonClicked"/>
                    <RadioButton
                        android:id="@+id/rcubo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="left"
                        android:text="@string/Cubo"
                        android:onClick="onRadioButtonClicked"/>
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="15dp"
                    android:id="@+id/imagen1"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:layout_margin="8dp"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:textSize="18dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:hint="@string/l1"
                android:id="@+id/lado1b"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:textSize="18dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:hint="@string/l2"
                android:id="@+id/lado2h"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:textSize="18dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:hint="@string/l3"
                android:id="@+id/lado3c"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:textSize="18dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:hint="@string/rad"
                android:id="@+id/radio"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:layout_margin="4dp"
            android:orientation="vertical">
            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.24"
                android:layout_marginTop="28dp"
                android:background="@color/indigo"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:text="Calcular"
                android:id="@+id/calculo"
                android:onClick="boton"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:layout_marginTop="20dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:text=""
                android:textColor="@color/black"
                android:background="@color/blanchedalmond"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:id="@+id/lavelarea"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:text=""
                android:textColor="@color/black"
                android:background="@color/blanchedalmond"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:id="@+id/resultadoarea"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:text=""
                android:textColor="@color/black"
                android:background="@color/blanchedalmond"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:id="@+id/lavelperi"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textSize="15dp"
                android:text=""
                android:textColor="@color/black"
                android:background="@color/blanchedalmond"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:id="@+id/resultadoperi"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>

